src/test/resources/30/single/xhtml/valid/doctype-1.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml">
    <head>
        <title></title>
    </head>
    <body>
    
        <math xmlns="http://www.w3.org/1998/Math/MathML">
            <semantics>
                <mfrac>
                    <msqrt>
                        <mtext>a</mtext>
                    </msqrt>
                    <mi>b</mi>
                </mfrac>
                <annotation-xml encoding="application/xhtml+xml" name="alternate-representation">
                    <span xmlns="http://www.w3.org/1999/xhtml">square root of a divided by the value
                        of b</span>
                </annotation-xml>
            </semantics>
        </math>
    </body>
</html>